# traffyx-ai

./: LICENSE  README.md  plot_metrics.py  pyproject.toml  requirements.txt  runner.py
docs/: ARCHITECTURE.md  ROADMAP.md
scripts/: run_pipeline.py
src/detection/: README.md  engine.py  run_inference.py  runner.py
src/reid/: README.md
src/tracking/: README.md  runner.py  tracker.py
src/violations/: README.md  engine.py
